--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,5 +2,21 @@
 # Copy this file to .env and modify the values as needed
 
 # Backend API Base URL
-BACKEND_BASE_URL=http://0.0.0.0:8310
+VITE_BACKEND_BASE_URL=http://0.0.0.0:8310
+
+# For different environments, uncomment the appropriate line:
+
+# Development (localhost)
+# VITE_BACKEND_BASE_URL=http://localhost:8310
+
+# Production
+# VITE_BACKEND_BASE_URL=https://your-production-domain.com
+
+# Docker development
+# VITE_BACKEND_BASE_URL=http://backend:8310
+
+# Note: 
+# - Environment variables must start with VITE_ to be accessible in Vite
+# - Restart the development server after changing .env file
+# - Never commit sensitive data in .env files to version control
 
