--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,29 +2,24 @@
   "name": "satish-digital-resume-frontend",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "lucide-react": "^0.294.0",
-    "web-vitals": "^2.1.4",
-    "serve": "^14.2.1"
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^4.4.0"
   },
   "scripts": {
-    "start": "PORT=3010 react-scripts start",
-    "build": "react-scripts build",
-    "serve": "serve -s build -l 3010",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "dev": "vite --port 3010",
+    "build": "vite build",
+    "preview": "vite preview --port 3010",
+    "serve": "vite preview --port 3010"
   },
   "browserslist": {
     "production": [
